--- a/index.html
+++ b/index.html
@@ -2,62 +2,64 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="icon" href="favicon.ico?v=2">
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Armaan's Personal Site</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+
   </head>
   <body>
-    <div class="top">
-      <img class="topcloud" src="cloud.png" alt="cloud-img">
-      <h1>I'm Armaan Singh Bains.</h1>
-      <h3>a Programmer and Student at the <a href="https://uwaterloo.ca/math/"><em>University of Waterloo.</em></a></h3>
-      <img class="bottomcloud" src="cloud.png" alt="cloud-img">
-      <img class="moutain" src="mountain.png" alt="mountain-img">
-    </div>
-
-    <div class="middle container">
-      <div class="profile">
-        <img src="IMG_4520-modified.png" alt="My Photo" width="200px">
-        <h2>Hello.</h2>
-        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
-      </div>
-      <hr>
-
-      <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img class="" src="giphy.gif" alt="Python Programming Language Picture">
-          <h3>Python Programming Language.</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-        </div>
-
-        <div class="skill-row">
-          <img class="" src="giphy-2.gif" alt="C Programming">
-          <h3>C programming Language.</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-        </div>
-
-        <div class="skill-row">
-          <img class="" src="prog.gif" alt="HTML/CSS Programming">
-          <h3>HTML/CSS</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-        </div>
-      </div>
-      <hr>
-
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:as9bains@uwaterloo.ca">CONTACT ME</a>
-      </div>
-
-    </div>
-    <div class="bottom container">
-      <a class="footer-link" href="https://www.linkedin.com/in/armaan-singh-bains-193623229/">LinkedIn</a>
-      <a class="footer-link" href="https://github.com/abains48">Github</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© Armaan Singh Bains.</p>
-    </div>
+    <table cellspacing="10">
+      <tr>
+        <td><img src="IMG_4520-modified.png" alt="Armaan's Profile Picture" height="150"></td>
+        <td><h1>Armaan Singh Bains</h1>
+        <p> <em><strong>Student at the <a href="https://uwaterloo.ca/math/">University Of Waterloo</a></strong></em></p>
+        <p>I am a Second year student at the University Of Waterloo.</p>
+        <a href="Projects.html">My List Of Projects</a>
+        <br>
+        <a href="https://github.com/abains48">My Github Portfolio</a></td>
+      </tr>
+    </table>
+    <hr>
+    <br>
+    <h3>Relevant Coursework</h3>
+    <ul>
+      <li>CS 115: Introduction to Computer Programming 1.</li>
+      <li>CS 116: Introduction to Computer Programming 2.</li>
+      <li>CS 136: Elementary Algorithm Design and Data Abstraction.</li>
+    </ul>
+    <hr>
+    <br>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>Python</td>
+        <td>5</td>
+        <td>C Programming</td>
+        <td>4</td>
+      </tr>
+      <tr>
+        <td>OOP Programming</td>
+        <td>4</td>
+        <td>HTML⭐️</td>
+        <td>3.5</td>
+      </tr>
+    </table>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <thead>
+        <th>Dates</th>
+        <th>Work</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>May 2022 - Present</td>
+          <td>Technology Associate at UW Fintech Club</td>
+        </tr>
+        <tr>
+          <td>June 2022 - Present</td>
+          <td>Data Sciene Intern at Data Glacier</td>
+        </tr>
+      </tbody>
+    </table>
+    <a href="Contact.html">Contact Me!!!</a>
   </body>
 </html>
