--- a/index.html
+++ b/index.html
@@ -2,64 +2,66 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Armaan's Personal Site</title>
-    <link rel="stylesheet" href="CSS/styles.css">
-
+    <title></title>
+    <link rel="icon" href="favicon.ico?v=2">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <table cellspacing="10">
-      <tr>
-        <td><img src="IMG_4520-modified.png" alt="Armaan's Profile Picture" height="150"></td>
-        <td><h1>Armaan Singh Bains</h1>
-        <p> <em><strong>Student at the <a href="https://uwaterloo.ca/math/">University Of Waterloo</a></strong></em></p>
-        <p>I am a Second year student at the University Of Waterloo.</p>
-        <a href="Projects.html">My List Of Projects</a>
-        <br>
-        <a href="https://github.com/abains48">My Github Portfolio</a></td>
-      </tr>
-    </table>
-    <hr>
-    <br>
-    <h3>Relevant Coursework</h3>
-    <ul>
-      <li>CS 115: Introduction to Computer Programming 1.</li>
-      <li>CS 116: Introduction to Computer Programming 2.</li>
-      <li>CS 136: Elementary Algorithm Design and Data Abstraction.</li>
-    </ul>
-    <hr>
-    <br>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-      <tr>
-        <td>Python</td>
-        <td>5</td>
-        <td>C Programming</td>
-        <td>4</td>
-      </tr>
-      <tr>
-        <td>OOP Programming</td>
-        <td>4</td>
-        <td>HTML⭐️</td>
-        <td>3.5</td>
-      </tr>
-    </table>
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-      <thead>
-        <th>Dates</th>
-        <th>Work</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>May 2022 - Present</td>
-          <td>Technology Associate at UW Fintech Club</td>
-        </tr>
-        <tr>
-          <td>June 2022 - Present</td>
-          <td>Data Sciene Intern at Data Glacier</td>
-        </tr>
-      </tbody>
-    </table>
-    <a href="Contact.html">Contact Me!!!</a>
+    <div class="top">
+      <img class="topcloud" src="cloud.png" alt="cloud-img">
+      <h1>I'm Armaan Singh Bains.</h1>
+      <h3>a Programmer and Student at the <a href="https://uwaterloo.ca/math/"><em>University of Waterloo.</em></a></h3>
+      <img class="bottomcloud" src="cloud.png" alt="cloud-img">
+      <img class="moutain" src="mountain.png" alt="mountain-img">
+    </div>
+
+    <div class="middle container">
+      <div class="profile">
+        <img src="IMG_4520-modified.png" alt="My Photo" width="300px">
+        <h2>Hello.</h2>
+        <p>I am a second Year student at the University of Waterloo majoring in Computational Mathematics and Statistics.</p>
+      </div>
+      <hr>
+
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="" src="giphy.gif" alt="Python Programming Language Picture" width="220px">
+          <h3>Python Programming Language.</h3>
+          <p>I have experience coding in Python. I have taken a Python Programming course at UWaterloo and scored 85.</p>
+            <p>My projects include Automated ISS Satellite Detector (Used ISS API),</p>
+          <p>Automated Birthday Wisher, Password Manager App, USA State Game, Pong arcade Game etc.</p>
+        </div>
+
+        <div class="skill-row">
+          <img class="" src="giphy-2.gif" alt="C Programming" width="220px">
+          <h3>C programming Language.</h3>
+          <p>I have taken a course Data named Elementary Algorithm Design and Data Abstraction in </p>
+          <p>  Programming Langauge C and scored 74. I have experience of coding in C</p>
+          <p>and know different data types and algorithms.</p>
+        </div>
+
+        <div class="skill-row">
+          <img class="" src="prog.gif" alt="HTML/CSS Programming" width="220px">
+          <h3>HTML/CSS</h3>
+          <p>I have completed a full stack developement course on Udemy and I continue to make</p>
+          <p> projects using HTML/CSS.</p>
+        </div>
+      </div>
+      <hr>
+
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>You can get in touch with me by using the following options.</h3>
+        <p>Please use the contact me option to email me or reach me by my Linkedin Profile or can see my Github profile as well.</p>
+        <a class="btn" href="mailto:as9bains@uwaterloo.ca">CONTACT ME</a>
+      </div>
+
+    </div>
+    <div class="bottom container">
+      <a class="footer-link" href="https://www.linkedin.com/in/armaan-singh-bains-193623229/">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/abains48">Github</a>
+      <p>© Armaan Singh Bains.</p>
+    </div>
   </body>
 </html>
