--- a/index.html
+++ b/index.html
@@ -15,53 +15,56 @@
       <img class="moutain" src="mountain.png" alt="mountain-img">
     </div>
 
-    <div class="middle container">
+    <div class="middle-container">
       <div class="profile">
         <img src="IMG_4520-modified.png" alt="My Photo" width="300px">
-        <h2>Hello.</h2>
-        <p>I am a second Year student at the University of Waterloo majoring in Computational Mathematics and Statistics.</p>
+        <h2><strong>Hello!</strong></h2>
+        <p class="intro">I am a Second Year student at the University of Waterloo pursuing a double major in Computational Mathematics and Statistics and a minor in Computing.</p>
       </div>
       <hr>
 
       <div class="skills">
         <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img class="" src="giphy.gif" alt="Python Programming Language Picture" width="220px">
+        <div class="skill-row1">
+          <img class="pythonimg" src="giphy.gif" alt="Python Programming Language Picture">
           <h3>Python Programming Language.</h3>
           <p>I have experience coding in Python. I have taken a Python Programming course at UWaterloo and scored 85.</p>
-            <p>My projects include Automated ISS Satellite Detector (Used ISS API),</p>
-          <p>Automated Birthday Wisher, Password Manager App, USA State Game, Pong arcade Game etc.</p>
+            <p>My projects include Automated ISS Satellite Detector (Used ISS API), Automated Birthday Wisher, Password Manager App, USA State Game, Pong arcade Game etc.</p>
         </div>
 
-        <div class="skill-row">
-          <img class="" src="giphy-2.gif" alt="C Programming" width="220px">
+        <div class="skill-row2">
+          <img class="cimg" src="giphy-2.gif" alt="C Programming">
           <h3>C programming Language.</h3>
-          <p>I have taken a course Data named Elementary Algorithm Design and Data Abstraction in </p>
-          <p>  Programming Langauge C and scored 74. I have experience of coding in C</p>
-          <p>and know different data types and algorithms.</p>
+          <p>I have taken a course Data named Elementary Algorithm Design and Data Abstraction in Programming Langauge C and scored 74. I have experience of coding in C and know different data types and algorithms.</p>
         </div>
 
-        <div class="skill-row">
-          <img class="" src="prog.gif" alt="HTML/CSS Programming" width="220px">
+        <div class="skill-row3">
+          <img class="htmlimg" src="prog.gif" alt="HTML/CSS Programming">
           <h3>HTML/CSS</h3>
-          <p>I have completed a full stack developement course on Udemy and I continue to make</p>
-          <p> projects using HTML/CSS.</p>
+          <p>I have completed a full stack developement course on Udemy and I continue to make projects using HTML/CSS.</p>
+        </div>
+
+        <div class="skill-row4">
+          <img class="sqlimg" src="sql.gif" alt="Structured Query Language">
+          <h3>SQL</h3>
+          <p>I have completed a Basics of SQL course on Coursera taught by University of Michigan and I have learned it by coding all the given assignments.</p>
+
         </div>
       </div>
       <hr>
 
       <div class="contact-me">
-        <h2>Get In Touch</h2>
+        <h2><strong>Get In Touch!</strong></h2>
         <h3>You can get in touch with me by using the following options.</h3>
-        <p>Please use the contact me option to email me or reach me by my Linkedin Profile or can see my Github profile as well.</p>
+        <p class="text">Please use the contact me button to email me or reach me by my Linkedin Profile or you can also view my Github profile as well.</p>
         <a class="btn" href="mailto:as9bains@uwaterloo.ca">CONTACT ME</a>
       </div>
 
     </div>
-    <div class="bottom container">
+    <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/armaan-singh-bains-193623229/">LinkedIn</a>
       <a class="footer-link" href="https://github.com/abains48">Github</a>
-      <p>© Armaan Singh Bains.</p>
+      <p class="name" >© Armaan Singh Bains.</p>
     </div>
   </body>
 </html>
