--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="top">
       <img class="topcloud" src="cloud.png" alt="cloud-img">
-      <h1>I'm Armaan Singh Bains.</h1>
+      <h1><strong>I'm Armaan Singh Bains.</strong></h1>
       <h3>a Programmer and Student at the <a href="https://uwaterloo.ca/math/"><em>University of Waterloo.</em></a></h3>
       <img class="bottomcloud" src="cloud.png" alt="cloud-img">
       <img class="moutain" src="mountain.png" alt="mountain-img">
