--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
       <div class="contact-me">
         <h2><strong>Get In Touch!</strong></h2>
+        <p>Please use the contact me button to email me or reach me by my Linkedin Profile or you can also view my Github profile as well.</p>
         <a class="btn" href="mailto:as9bains@uwaterloo.ca">CONTACT ME</a>
       </div>
 
