--- a/index.html
+++ b/index.html
@@ -3,11 +3,49 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="icon" href="favicon.ico?v=2">
+    <link rel="icon" href="favicon.ico?v=2"
+    <script src="https://kit.fontawesome.com/35b3fb8f71.js" crossorigin="anonymous"></script>>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div class="top">
+
+    <!-- Navbar -->
+
+  <nav class="navbar navbar-expand-lg fixed-top">
+  <!-- <a class="navbar-brand" href="#">Armaan's Personal Website</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button> -->
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active mr-3">
+        <a class="nav-link" href="#homepage">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item mr-3">
+        <a class="nav-link" href="#Skills">Skills</a>
+      </li>
+      <li class="nav-item mr-3">
+        <a class="nav-link" href="#carouselExampleIndicators">Projects</a>
+      </li>
+      <li class="nav-item mr-2">
+        <a class="nav-link" href="#Contact">Contact Me</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
+
+
+<!-- Top Section -->
+    <div class="top" id="homepage">
       <img class="topcloud" src="cloud.png" alt="cloud-img">
       <h1><strong>I'm Armaan Singh Bains.</strong></h1>
       <h3>a Programmer and Student at the <a href="https://uwaterloo.ca/math/"><em>University of Waterloo.</em></a></h3>
@@ -15,15 +53,19 @@
       <img class="moutain" src="mountain.png" alt="mountain-img">
     </div>
 
+
+<!-- Introduction -->
     <div class="middle-container">
       <div class="profile">
         <img src="IMG_4520-modified.png" alt="My Photo" width="300px">
-        <h2><strong>Hello!</strong></h2>
+        <h2 class="intro-heading"><strong>Hello!</strong></h2>
         <p class="intro">I am a Second Year student at the University of Waterloo pursuing a double major in Computational Mathematics and Statistics and a minor in Computing.</p>
       </div>
       <hr>
 
-      <div class="skills">
+
+<!-- Skills -->
+      <div class="skills" id="Skills">
         <h2>My Skills.</h2>
         <div class="skill-row1">
           <img class="pythonimg" src="giphy.gif" alt="Python Programming Language Picture">
@@ -44,6 +86,12 @@
           <p>I have completed a full stack developement course on Udemy and I continue to make projects using HTML/CSS.</p>
         </div>
 
+        <div class="skill-row5">
+          <img class="js-img" src="Javascript.gif" alt="JavaScript">
+          <h3>JavaScript</h3>
+          <p>I have made projects such as the simon game, drumkit using Javascipt and related frameworks such as jQuery.</p>
+        </div>
+
         <div class="skill-row4">
           <img class="sqlimg" src="sql.gif" alt="Structured Query Language">
           <h3>SQL</h3>
@@ -53,8 +101,47 @@
       </div>
       <hr>
 
-      <div class="contact-me">
+      <!-- Projects -->
+
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <h2 class="carousel-heading">Projects</h2>
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <h3><a href="https://abains48.github.io/Simon-game/">Simon Game Project</a></h3>
+      <img class="project-img" src="Simon-game.png" alt="Simon Game Picture">
+      </div>
+    <div class="carousel-item">
+      <h3><a href="https://abains48.github.io/Drum-Kit/">Drum Kit Project</a></h3>
+      <img class="project-img" src="DrumKit.png" alt="Drum Kit Picture">
+    </div>
+    <div class="carousel-item">
+      <h3><a href="https://abains48.github.io/Dice-game/">Dice Game Project</a></h3>
+      <img class="project-img" src="Dice-game.png" alt="Dice Game Picture">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<hr>
+
+
+
+<!-- Contact Section -->
+      <div class="contact-me" id="Contact">
         <h2><strong>Get In Touch!</strong></h2>
+        <h3>You can get in touch with me by using the following options.</h3>
+        <!-- <p class="text">Please use the contact me button to email me or reach me by my Linkedin Profile or you can also view my Github profile as well.</p> -->
         <a class="btn" href="mailto:as9bains@uwaterloo.ca">CONTACT ME</a>
       </div>
 
