--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -18,16 +17,14 @@
   </head>
   <body>
 
-    <!-- Navbar -->
-
+<div id="white" class="container-fluid">
   <nav class="navbar navbar-expand-lg fixed-top">
-  <!-- <a class="navbar-brand" href="#">Armaan's Personal Website</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button> -->
-  <div class="collapse navbar-collapse" id="navbarNav">
+   <button class="navbar-toggler ml-auto navbar-light" type="button" data-toggle="collapse" data-target="#demo" aria-controls="demo" aria-expanded="false" aria-label="Toggle navigation">
+   <span class="navbar-toggler-icon"></span>
+ </button>
+  <div class="navbar-collapse collapse" id="demo">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active mr-3">
+      <li class="nav-item mr-3">
         <a class="nav-link" href="#homepage">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item mr-3">
@@ -43,9 +40,40 @@
     </ul>
   </div>
 </nav>
+</div>
+
+<!-- <section id="title">
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="">Tindog</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#demo" aria-controls="demo" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="navbar-collapse collapse" id="demo">
+          <ul class="navbar-nav ml-auto">
+               <li class="nav-item">
+              <a class="nav-link" href="">Contact</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="">Pricing</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="">Faltu</a>
+          </li>
+      </ul>
+      </div>
+  </nav> -->
 
 
 <!-- Top Section -->
+  <div class="top" id="homepage">
+    <img class="topcloud" src="cloud.png" alt="cloud-img">
+    <h1><strong>I'm Armaan Singh Bains.</strong></h1>
+    <h3>a Programmer and Student at the <a href="https://uwaterloo.ca/math/"><em>University of Waterloo.</em></a></h3>
+    <img class="bottomcloud" src="cloud.png" alt="cloud-img">
+    <img class="moutain" src="mountain.png" alt="mountain-img">
+  </div>
+
     <div class="top" id="homepage">
       <img class="topcloud" src="cloud.png" alt="cloud-img">
       <h1><strong>I'm Armaan Singh Bains.</strong></h1>
@@ -53,6 +81,7 @@
       <img class="bottomcloud" src="cloud.png" alt="cloud-img">
       <img class="moutain" src="mountain.png" alt="mountain-img">
     </div>
+
 
 
 <!-- Introduction -->
@@ -152,5 +181,6 @@
       <a class="footer-link" href="https://github.com/abains48">Github</a>
       <p class="name" >© Armaan Singh Bains.</p>
     </div>
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
