--- a/index.html
+++ b/index.html
@@ -132,9 +132,16 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
   </ol>
+
   <div class="carousel-inner">
     <div class="carousel-item active">
+      <h3><a href="https://calm-island-11603.herokuapp.com">Personal BlogPost Website</a></h3>
+        <img class="project-img" src="Blogpost.png" alt="Blog Website Picture">
+      </div>
+
+    <div class="carousel-item">
       <h3><a href="https://abains48.github.io/Simon-game/">Simon Game Project</a></h3>
       <img class="project-img" src="Simon-game.png" alt="Simon Game Picture">
       </div>
